# E1.31 (sACN) library for C/C++
# Hugo Hromic - http://github.com/hhromic
#
# Copyright 2016 Hugo Hromic
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

AM_CFLAGS = -Wall -O3 -std=gnu11 -pedantic

lib_LTLIBRARIES = libe131.la

libe131_la_SOURCES = e131.c
include_HEADERS = e131.h
